--- a/srv/style.css
+++ b/srv/style.css
@@ -11,6 +11,7 @@
     background: none;
     border: none;
     outline: none;
+    padding-left: 20px;
 }
 
 #searchbar {
@@ -36,9 +37,6 @@
 }
 
 .render_qa_question {
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.2);
-    margin: 10px;
-    padding-top: 1%;
     display: grid;
 }
 
@@ -51,8 +49,17 @@ img {
     justify-content: center;
 }
 
-#options_div{
+.options_div{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.render_response {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 html {
@@ -66,4 +73,48 @@ body {
 progress{
     width: 100%;
     height: 2px;
+}
+
+.render_qa {
+    display: grid;
+    border-top: 10px solid #0059ff;
+    border-left: 2px solid #0059ff;
+    border-radius: 30px;
+    padding: 10px;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.2);
+    margin: 10px;
+    padding-top: 10px;
+}
+
+.render_option {
+    margin: 2px;
+    width: fit-content;
+}
+
+.render_option *{
+    margin: 0;
+    padding: 2px;
+}
+
+#hint_search {
+    text-align: center;
+    display: flex;
+    padding: 10px;
+}
+
+.selectOption {
+    width: fit-content;
+    margin: 10px;
+    border-bottom: solid 4px;
+    cursor: pointer;
+}
+
+.selectOption:hover{
+    border-bottom: solid 4px #0059ff;
+    background: #5993ff;
+    color: #fff;
+}
+
+.center {
+    text-align: center;
 }
